# 20250217_coopiteasy_interview

./: README.md  pyproject.toml  requirements.txt
20250217_coopiteasy_interview/: html_parser.py  main.py
