[project]
name = "20250217-coopiteasy-interview"
version = "0.1.0"
description = ""
authors = [
    {name = "Simon Hick",email = "simon.hick.t@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
