[project]
name = "20250217-coopiteasy-interview"
version = "0.1.0"
description = ""
authors = [
    {name = "Simon Hick",email = "simon.hick.t@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "html5lib (>=1.1,<2.0)",
    "validators (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
